--- a/index.html
+++ b/index.html
@@ -4,11 +4,52 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./style.css" />
     <title>Document</title>
   </head>
   <body>
-    <div id="box"></div>
-    <p>hello</p>
+    <div class="container">
+      <div class="row">
+        <div class="col d-flex justify-content-start">High Scores</div>
+        <div class="col d-flex justify-content-end">Timer</div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row justify-content-md-center">
+        <div id="quizContainer">
+          <div>Computer Quiz</div>
+          <div id="quesions"></div>
+          <label for="" class="choiceBox"
+            ><input type="radio" name="option" value="1" /><span
+              id="opt1"
+            ></span>
+          </label>
+          <label for="" class="choiceBox"
+            ><input type="radio" name="option" value="1" /><span
+              id="opt2"
+            ></span>
+          </label>
+          <label for="" class="choiceBox"
+            ><input type="radio" name="option" value="1" /><span
+              id="opt3"
+            ></span>
+          </label>
+          <label for="" class="choiceBox"
+            ><input type="radio" name="option" value="1" /><span
+              id="opt4"
+            ></span>
+          </label>
+        </div>
+      </div>
+    </div>
+    <button id="submit">Submit Quiz</button>
+    <div id="results" style="display: none;"></div>
     <script src="questions.js"></script>
     <script src="script.js"></script>
   </body>
