--- a/codequizpart 2/index.html
+++ b/codequizpart 2/index.html
@@ -11,35 +11,24 @@
 
   <body>
     <div id="container">
-      <div id="start">Start Quiz!</div>
+      <div id="header" class="header">
+        <div id="highScores">High Scores</div>
+        <div id="timer">Timer</div>
+      </div>
+      <div id="start" class="start">Start Quiz!</div>
 
       <div id="quiz" style="display: none">
-        <div id="question"></div>
-
-        <div id="qImg"></div>
-
+        <div id="question" class="question"></div>
         <div id="choices">
           <div class="choice" id="A" onclick="checkAnswer('A')"></div>
-
           <div class="choice" id="B" onclick="checkAnswer('B')"></div>
-
           <div class="choice" id="C" onclick="checkAnswer('C')"></div>
+          <div class="choice" id="D" onclick="checkAnswer('D')"></div>
         </div>
-
-        <div id="timer">
-          <div id="counter"></div>
-
-          <div id="btimeGauge"></div>
-
-          <div id="timeGauge"></div>
-        </div>
-
-        <div id="progress"></div>
-      </div>
 
       <div id="scoreContainer" style="display: none"></div>
     </div>
-
-    <script src="quiz.js"></script>
+    <script src="questions.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
