parse data, append divs, time set

--- a/codequizpart 2/index.html
+++ b/codequizpart 2/index.html
@@ -12,7 +12,7 @@
   <body>
     <div id="container">
       <div id="header" class="header">
-        <div id="highScores">High Scores</div>
+        <div id="highScoresBtn">High Scores</div>
         <div id="timer">Timer</div>
       </div>
       <div id="start" class="start">Start Quiz!</div>
@@ -35,6 +35,10 @@
           <input placeholder="Your Name" id="name" />
           <button id="add-btn">Submit Score</button>
         </form>
+      </div>
+      <div id="highScores" style="display: none">
+        <div>High Scores</div>
+        <div id="nameAndScore"></div>
       </div>
     </div>
     <script src="questions.js"></script>
